基本機能移植完了

--- a/Unique/Unique.vcxproj
+++ b/Unique/Unique.vcxproj
@@ -16,11 +16,27 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Game\block\block.cpp" />
+    <ClCompile Include="Game\enemy\Enemy.cpp" />
+    <ClCompile Include="Game\enemy\EnemyBullet.cpp" />
+    <ClCompile Include="Game\enemy\EnemyCore.cpp" />
+    <ClCompile Include="Game\followCamera\FollowCamera.cpp" />
+    <ClCompile Include="Game\player\Player.cpp" />
+    <ClCompile Include="Game\player\Weapon.cpp" />
+    <ClCompile Include="Game\stage\Stage.cpp" />
     <ClCompile Include="Unique.cpp" />
     <ClCompile Include="GameScene.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Game\block\block.h" />
+    <ClInclude Include="Game\enemy\Enemy.h" />
+    <ClInclude Include="Game\enemy\EnemyBullet.h" />
+    <ClInclude Include="Game\enemy\EnemyCore.h" />
+    <ClInclude Include="Game\followCamera\FollowCamera.h" />
+    <ClInclude Include="Game\player\Player.h" />
+    <ClInclude Include="Game\player\Weapon.h" />
+    <ClInclude Include="Game\stage\Stage.h" />
     <ClInclude Include="Unique.h" />
     <ClInclude Include="GameScene.h" />
   </ItemGroup>
