--- a/Unique/Unique.vcxproj
+++ b/Unique/Unique.vcxproj
@@ -22,6 +22,7 @@
     <ClCompile Include="Game\enemy\EnemyCore.cpp" />
     <ClCompile Include="Game\enemy\EnemyCoreManager.cpp" />
     <ClCompile Include="Game\enemy\Laser.cpp" />
+    <ClCompile Include="Game\enemy\SmallEnemy.cpp" />
     <ClCompile Include="Game\followCamera\FollowCamera.cpp" />
     <ClCompile Include="Game\player\Player.cpp" />
     <ClCompile Include="Game\player\Reticle3D.cpp" />
@@ -38,6 +39,7 @@
     <ClInclude Include="Game\enemy\EnemyCore.h" />
     <ClInclude Include="Game\enemy\EnemyCoreManager.h" />
     <ClInclude Include="Game\enemy\Laser.h" />
+    <ClInclude Include="Game\enemy\SmallEnemy.h" />
     <ClInclude Include="Game\followCamera\FollowCamera.h" />
     <ClInclude Include="Game\player\Player.h" />
     <ClInclude Include="Game\player\Reticle3D.h" />
