--- a/Unique/Unique.vcxproj
+++ b/Unique/Unique.vcxproj
@@ -24,10 +24,12 @@
     <ClCompile Include="Game\enemy\Laser.cpp" />
     <ClCompile Include="Game\enemy\SmallEnemy.cpp" />
     <ClCompile Include="Game\followCamera\FollowCamera.cpp" />
+    <ClCompile Include="Game\player\Gravity.cpp" />
     <ClCompile Include="Game\player\Player.cpp" />
     <ClCompile Include="Game\player\Reticle3D.cpp" />
     <ClCompile Include="Game\player\Weapon.cpp" />
     <ClCompile Include="Game\stage\Stage.cpp" />
+    <ClCompile Include="GlobalVariables.cpp" />
     <ClCompile Include="Unique.cpp" />
     <ClCompile Include="GameScene.cpp" />
     <ClCompile Include="main.cpp" />
@@ -41,10 +43,12 @@
     <ClInclude Include="Game\enemy\Laser.h" />
     <ClInclude Include="Game\enemy\SmallEnemy.h" />
     <ClInclude Include="Game\followCamera\FollowCamera.h" />
+    <ClInclude Include="Game\player\Gravity.h" />
     <ClInclude Include="Game\player\Player.h" />
     <ClInclude Include="Game\player\Reticle3D.h" />
     <ClInclude Include="Game\player\Weapon.h" />
     <ClInclude Include="Game\stage\Stage.h" />
+    <ClInclude Include="GlobalVariables.h" />
     <ClInclude Include="Unique.h" />
     <ClInclude Include="GameScene.h" />
   </ItemGroup>
