--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -177,6 +177,7 @@
     <ClCompile Include="Graphics\SpriteRenderer.cpp" />
     <ClCompile Include="Graphics\Timer.cpp" />
     <ClCompile Include="Input\Input.cpp" />
+    <ClCompile Include="Math\Animation.cpp" />
     <ClCompile Include="Math\Camera.cpp" />
     <ClCompile Include="Math\Color.cpp" />
     <ClCompile Include="Math\Geometry.cpp" />
@@ -275,6 +276,7 @@
     <ClInclude Include="Graphics\SpriteRenderer.h" />
     <ClInclude Include="Graphics\Timer.h" />
     <ClInclude Include="Input\Input.h" />
+    <ClInclude Include="Math\Animation.h" />
     <ClInclude Include="Math\Camera.h" />
     <ClInclude Include="Math\Color.h" />
     <ClInclude Include="Math\Geometry.h" />
