--- a/Unique/Unique.vcxproj
+++ b/Unique/Unique.vcxproj
@@ -23,6 +23,7 @@
     <ClCompile Include="Game\enemy\EnemyCoreManager.cpp" />
     <ClCompile Include="Game\enemy\Laser.cpp" />
     <ClCompile Include="Game\enemy\SmallEnemy.cpp" />
+    <ClCompile Include="Game\enemy\SmallEnemyManager.cpp" />
     <ClCompile Include="Game\followCamera\FollowCamera.cpp" />
     <ClCompile Include="Game\player\Gravity.cpp" />
     <ClCompile Include="Game\player\Player.cpp" />
@@ -42,6 +43,7 @@
     <ClInclude Include="Game\enemy\EnemyCoreManager.h" />
     <ClInclude Include="Game\enemy\Laser.h" />
     <ClInclude Include="Game\enemy\SmallEnemy.h" />
+    <ClInclude Include="Game\enemy\SmallEnemyManager.h" />
     <ClInclude Include="Game\followCamera\FollowCamera.h" />
     <ClInclude Include="Game\player\Gravity.h" />
     <ClInclude Include="Game\player\Player.h" />
