Animation追加の途中

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -179,7 +179,7 @@
     <ClCompile Include="Graphics\ToonModel.cpp" />
     <ClCompile Include="Graphics\ToonRenderer.cpp" />
     <ClCompile Include="Input\Input.cpp" />
-    <ClCompile Include="Math\Animation.cpp" />
+    <ClCompile Include="Math\AnimationNode.cpp" />
     <ClCompile Include="Math\Camera.cpp" />
     <ClCompile Include="Math\Color.cpp" />
     <ClCompile Include="Math\Geometry.cpp" />
@@ -227,6 +227,7 @@
     <ClInclude Include="Externals\nlohmann\json_fwd.hpp" />
     <ClInclude Include="Framework\Engine.h" />
     <ClInclude Include="Framework\Game.h" />
+    <ClInclude Include="Graphics\Animation.h" />
     <ClInclude Include="Graphics\Bloom.h" />
     <ClInclude Include="Graphics\ComputeShader.h" />
     <ClInclude Include="Graphics\Core\ColorBuffer.h" />
@@ -280,7 +281,7 @@
     <ClInclude Include="Graphics\ToonModel.h" />
     <ClInclude Include="Graphics\ToonRenderer.h" />
     <ClInclude Include="Input\Input.h" />
-    <ClInclude Include="Math\Animation.h" />
+    <ClInclude Include="Math\AnimationNode.h" />
     <ClInclude Include="Math\Camera.h" />
     <ClInclude Include="Math\Color.h" />
     <ClInclude Include="Math\Geometry.h" />
