--- a/Unique/Unique.vcxproj
+++ b/Unique/Unique.vcxproj
@@ -16,6 +16,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="App\MapEditor.cpp" />
     <ClCompile Include="Game\block\Block.cpp" />
     <ClCompile Include="Game\enemy\Enemy.cpp" />
     <ClCompile Include="Game\enemy\EnemyBullet.cpp" />
@@ -35,6 +36,7 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="App\MapEditor.h" />
     <ClInclude Include="Game\block\Block.h" />
     <ClInclude Include="Game\enemy\Enemy.h" />
     <ClInclude Include="Game\enemy\EnemyBullet.h" />
