--- a/Unique/Unique.vcxproj.filters
+++ b/Unique/Unique.vcxproj.filters
@@ -74,6 +74,9 @@
     <ClCompile Include="App\MapEditor.cpp">
       <Filter>App</Filter>
     </ClCompile>
+    <ClCompile Include="PlayerModel.cpp">
+      <Filter>Game\player</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Unique.h">
@@ -124,6 +127,9 @@
     </ClInclude>
     <ClInclude Include="App\MapEditor.h">
       <Filter>App</Filter>
+    </ClInclude>
+    <ClInclude Include="PlayerModel.h">
+      <Filter>Game\player</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
