一旦ゲームループ完成

--- a/Unique/Unique.vcxproj
+++ b/Unique/Unique.vcxproj
@@ -19,6 +19,9 @@
     <ClCompile Include="App\MapEditor.cpp" />
     <ClCompile Include="Game\block\Block.cpp" />
     <ClCompile Include="Game\Effect\Effect.cpp" />
+    <ClCompile Include="Game\enemy\BarrierBullet.cpp" />
+    <ClCompile Include="Game\enemy\BarrierBulletManager.cpp" />
+    <ClCompile Include="Game\enemy\BulletManager.cpp" />
     <ClCompile Include="Game\enemy\Enemy.cpp" />
     <ClCompile Include="Game\enemy\EnemyBullet.cpp" />
     <ClCompile Include="Game\enemy\EnemyCore.cpp" />
@@ -41,6 +44,9 @@
     <ClInclude Include="App\MapEditor.h" />
     <ClInclude Include="Game\block\Block.h" />
     <ClInclude Include="Game\Effect\Effect.h" />
+    <ClInclude Include="Game\enemy\BarrierBullet.h" />
+    <ClInclude Include="Game\enemy\BarrierBulletManager.h" />
+    <ClInclude Include="Game\enemy\BulletManager.h" />
     <ClInclude Include="Game\enemy\Enemy.h" />
     <ClInclude Include="Game\enemy\EnemyBullet.h" />
     <ClInclude Include="Game\enemy\EnemyCore.h" />
